# ros-packages

./: .gitattributes  README.md  frames_2025-11-23_22.38.44.gv  robot_loaded_urdf.txt
example_2/: CMakeLists.txt  actuation_system_hardware.xml  package.xml
example_2/bringup/config/: diffbot_controllers copy.yaml  diffbot_controllers.yaml
example_2/bringup/launch/: diffbot.launch copy.py  diffbot.launch.py
example_2/description/ros2_control/: diffbot.ros2_control.xacro
example_2/description/urdf/: actuation_system.urdf.xacro  diffbot.urdf copy.xacro
example_2/hardware/: actuation_system.cpp  diffbot_system.cpp
example_2/hardware/include/ros2_control_demo_example_2/: actuation_system.hpp  diffbot_system.hpp
install/: local_setup.sh  setup.sh
log/: latest_build
miguel_urdf/: package.xml  setup.cfg  setup.py
miguel_urdf/launch/: display.launch.py  gazebo.launch.py  view_robot_rviz.launch.py
miguel_urdf/urdf/: URDF_v1.gazebo  URDF_v1.trans  URDF_v1.xacro  cad_urdf.urdf.xacro  cad_urdf_core.urdf.xacro  cad_urdf_gazebo.urdf.xacro  materials.xacro
my_robot_sim/: package.xml  setup.py
my_robot_sim/config/: F710.yaml  controller_setup.mk
my_robot_sim/gazebo/: building_robot.sdf
my_robot_sim/launch/: teleop_sim.launch.py
phidgets_test/: CMakeLists.txt  package.xml
phidgets_test/include/phidgets_test/: phidgets_limit_switch.hpp  phidgets_motor_driver.hpp
phidgets_test/src/: actuation_homing_node.cpp  actuation_sub.cpp  homing_client.cpp  plot_homing_positions.py  test_limit_switch.cpp  test_phidgets_motor_driver.cpp
robot_bringup/: CMakeLists.txt  ibex_control.xml  package.xml
robot_bringup/config/: diff_drive_controller.yaml
robot_bringup/hardware/: actuation_system.cpp  diffbot_system.cpp
robot_bringup/launch/: ibex.launch.py
robot_controls_bringup/: CMakeLists.txt  package.xml
robot_description/: CMakeLists.txt  package.xml
robot_description/launch/: view_robot.launch.py  (+3 more)
robot_sim_bringup/: CMakeLists.txt  package.xml
robot_sim_description/: CMakeLists.txt
robot_teleop/: README.md  package.xml  setup.py
ros2_control_demo_description/: CMakeLists.txt
search-support-robots-mic_array/: README.md
(+73 files in other folders)
