<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ros2_control_demo_example_2</name>
  <version>0.0.0</version>
  <description>The ros2_control_demo_example_2 package</description>
  <maintainer email="callum@todo.todo">callum</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>hardware_interface</depend>
  <depend>pluginlib</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>ros2_control_demo_description</depend>
  <depend>phidgets_test</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>